Created the selected songs

--- a/src/styles/_library.scss
+++ b/src/styles/_library.scss
@@ -30,7 +30,8 @@
       #fad0c4 99%,
       #fad0c4 100%
     );
-    transition: 0.3s ease-in-out;
+    transform: scale(1.05);
+    transition: 0.7s ease-in-out;
   }
 }
 
