--- a/src/styles/_library.scss
+++ b/src/styles/_library.scss
@@ -18,6 +18,7 @@
   align-items: center;
   padding: 1rem 2rem 1rem 2rem;
   cursor: pointer;
+  transition: all 0.75s ease-out;
 
   img {
     width: 30%;
@@ -31,7 +32,6 @@
       #fad0c4 100%
     );
     transform: scale(1.05);
-    transition: 0.7s ease-in-out;
   }
 }
 
@@ -61,4 +61,13 @@
   background-color: rgba(155, 155, 155, 0.5);
   border-radius: 20px;
   border: transparent;
+}
+
+.selected {
+  background-image: linear-gradient(
+    45deg,
+    #ff9a9e 0%,
+    #fad0c4 99%,
+    #fad0c4 100%
+  );
 }
