--- a/src/styles/_library.scss
+++ b/src/styles/_library.scss
@@ -7,6 +7,9 @@
   background-color: white;
   box-shadow: 2px 2px 50px rgb(204, 204, 204);
   overflow: scroll;
+  transform: translateX(-100%);
+  transition: all 0.5s ease;
+  opacity: 0;
 
   h2 {
     padding: 2rem;
@@ -70,4 +73,9 @@
     #fad0c4 99%,
     #fad0c4 100%
   );
+}
+
+.active-library {
+  transform: translateX(0%);
+  opacity: 1;
 }
