--- a/src/styles/_player.scss
+++ b/src/styles/_player.scss
@@ -40,6 +40,11 @@ input[type='range']::-webkit-slider-thumb {
   height: 16px;
   width: 16px;
 }
+input[type='range']::-moz-range-thumb {
+  -webkit-appearance: none;
+  height: 16px;
+  width: 16px;
+}
 
 .track {
   width: 100%;
